--- a/src/components/SignupPage.css
+++ b/src/components/SignupPage.css
@@ -1,182 +1,125 @@
-/* SignupPage.css
-.signup-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    padding: 20px;
-    background-color: #e9f5f2;
-  }
-  
-  .signup-box {
-    background-color: white;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-  }
-  
-  .signup-box h2 {
-    margin-bottom: 20px;
-  }
-  
-  .signup-box input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .signup-box button {
-    width: 100%;
-    padding: 10px;
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .signup-box p {
-    margin-top: 20px;
-  }
-  
-  @media (max-width: 768px) {
-    .signup-box {
-      padding: 30px;
-      max-width: 300px;
-    }
-  
-    .signup-box h2 {
-      font-size: 1.5rem;
-    }
-  }
-   */
+ .best-sellers {
+   padding: 20px;
+ }
 
-   .best-sellers {
-    padding: 20px;
-}
+ .carousel {
+   display: flex;
+   overflow-x: auto;
+   gap: 20px;
+   padding: 20px 0;
+   justify-content: center;
+   background-color: rgb(250, 243, 243);
+ }
 
-.carousel {
-    display: flex;
-    overflow-x: auto;
-    gap: 20px;
-    padding: 20px 0;
-    justify-content: center;
-    background-color: rgb(250, 243, 243);
-}
+ .item {
+   border: 1px solid #f9d7d7;
+   padding: 10px;
+   border-radius: 8px;
+   background-color: #fdfbfb;
+   flex-shrink: 0;
+   width: 450px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
 
-.item {
-    border: 1px solid #f9d7d7;
-    padding: 10px;
-    border-radius: 8px;
-    background-color: #fdfbfb;
-    flex-shrink: 0;
-    width: 450px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+ .myimage {
+   width: 50%;
+   height: auto;
+   max-height: 300px;
+   object-fit: cover;
+   margin-bottom: 10px;
+ }
 
-.myimage {
-    width: 50%;
-    height: auto;
-    max-height: 300px;
-    object-fit: cover;
-    margin-bottom: 10px;
-}
+ .item:hover {
+   transform: translateY(-10px);
+   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+ }
 
-.item:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-}
+ .myretailprice {
+   margin: 10px 0;
+   font-weight: bold;
+   text-align: center;
+ }
 
-.myretailprice {
-    margin: 10px 0;
-    font-weight: bold;
-    text-align: center;
-}
+ .price {
+   margin-top: auto;
+   display: flex;
+   gap: 16px;
+ }
 
-.price {
-    margin-top: auto;
-    display: flex;
-    gap: 16px;
-}
+ .shopnow {
+   padding: 12px 40px;
+   background-color: #fcfdfe;
+   color: rgb(52, 54, 202);
+   border: 2px solid blue;
+   border-radius: 25px;
+   cursor: pointer;
+ }
 
-.shopnow {
-    padding: 12px 40px;
-    background-color: #fcfdfe;
-    color: rgb(52, 54, 202);
-    border: 2px solid blue;
-    border-radius: 25px;
-    cursor: pointer;
-}
+ .shopnow:hover {
+   background-color: #accced;
+ }
 
-.shopnow:hover {
-    background-color: #accced;
-}
+ .view:hover {
+   background-color: darkblue;
+ }
 
-.view:hover {
-    background-color: darkblue;
-}
+ .view {
+   padding: 10px 20px;
+   background-color: rgb(245, 59, 30);
+   color: white;
+   border: none;
+   border-radius: 4px;
+   cursor: pointer;
+   margin-top: 20px;
+   margin-bottom: 20px;
+ }
 
-.view {
-    padding: 10px 20px;
-    background-color: rgb(245, 59, 30);
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
+ .best {
+   display: flex;
+   justify-content: space-between;
+ }
 
-.best {
-    display: flex;
-    justify-content: space-between;
-}
-
-/* Responsive Styles */
-@media (max-width: 768px) {
-  .carousel {
-      flex-wrap: nowrap;
-      justify-content: center;
-  }
-}
+ /* Responsive Styles */
+ @media (max-width: 768px) {
+   .carousel {
+     flex-wrap: nowrap;
+     justify-content: center;
+   }
+ }
 
 
-.controls-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
+ .controls-container {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 20px;
+ }
 
-.custom-arrows {
-  display: flex;
-  justify-content: space-between;
-  width: 100px;
-}
-.prev-arrow, .next-arrow {
-  background: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-  font-size: 18px;
-}
+ .custom-arrows {
+   display: flex;
+   justify-content: space-between;
+   width: 100px;
+ }
 
-.view-more-button {
-  background: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-left: 20px;
-}
+ .prev-arrow,
+ .next-arrow {
+   background: #007bff;
+   color: #fff;
+   border: none;
+   border-radius: 50%;
+   padding: 10px;
+   cursor: pointer;
+   font-size: 18px;
+ }
+
+ .view-more-button {
+   background: #007bff;
+   color: #fff;
+   border: none;
+   border-radius: 5px;
+   padding: 10px 20px;
+   cursor: pointer;
+   margin-left: 20px;
+ }
